# efficient-dl-systems

week02_management_and_testing/homework/: README.md  dvc.yaml  main.py  prepare_data.py  pyproject.toml  requirements.txt  utils.py
week02_management_and_testing/homework/conf/: config.yaml
week02_management_and_testing/homework/conf/dataloader/: dataloader.yaml
week02_management_and_testing/homework/conf/train/model/: ddpm.yaml  unet.yaml
week02_management_and_testing/homework/conf/train/optimizer/: sgd.yaml
week02_management_and_testing/homework/modeling/: diffusion.py  training.py  unet.py
week02_management_and_testing/homework/tests/: conftest.py  test_pipeline.py
week03_fast_pipelines/homework/: report.ipynb
week03_fast_pipelines/homework/task1/: dataset.py  scaler.py  train.py
week03_fast_pipelines/homework/task2/: dataset.py  run_epoch.py  transformer.py
week03_fast_pipelines/homework/task3/: dataset.py  profiler.py  run_epoch.py  utils.py
week04_data_parallel/homework/: ddp_cifar100.py  ddp_cifar100_benchmark.py  pyproject.toml  report.ipynb  sequential_print.py  syncbn.py  syncbn_benchmark.py  test_syncbn.py
